--- a/style.css
+++ b/style.css
@@ -5,25 +5,27 @@ html {
     box-sizing: inherit;
 }
 
-body {
+.container {
     display: flex;
-    flex: 1 0 0;
+    flex: 1 1 0;
     flex-flow: row nowrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    height: 100vh;
+    width: 100vh;
 }
 
 body > div {
     display: flex;
     margin: 10px;
-    background-color: lightgray;
+    background-color: white;
 }
 
 .square {
     width: 1em;
     height: 1em;
     margin: 1px;
-    /* background-color: lightblue; */
+    background-color: lightgray;
 }
 
 .color {
